# zju_FEMApp

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  build.sh  dll.txt  packer.sh  run.sh  要求.md
.github/agents/: femapp.agent.md
FEMConfig/: CMakeLists.txt  test.cpp
FEMConfig/include/cc/neolux/FEMConfig/: FEMConfig.h
FEMConfig/src/: FEMConfig.cpp
FileAssocLib/: CMakeLists.txt
FileAssocLib/include/cc/neolux/fem/: FileAssociation.h
FileAssocLib/src/: FileAssociation.cpp  FileAssociation_stub.cpp
MultiPrjWs/: CMakeLists.txt
MultiPrjWs/include/cc/neolux/fem/mpw/: multi_prj_ws_config_dialog.h  multi_prj_ws_widget.h  multi_project_workspace.h
MultiPrjWs/src/: multi_prj_ws_config_dialog.cpp  multi_prj_ws_widget.cpp  multi_project_workspace.cpp  multiprjws.ui  multiprjws_config.ui
OpenXLSX/: CMakeLists.txt  OpenXLSX.hpp
OpenXLSX/headers/: IZipArchive.hpp  XLCell.hpp  XLCellIterator.hpp  XLCellRange.hpp  XLCellReference.hpp  XLCellValue.hpp  XLColor.hpp  XLColumn.hpp  XLCommandQuery.hpp  XLComments.hpp  XLConstants.hpp  XLContentTypes.hpp  XLDateTime.hpp  XLDocument.hpp  XLDrawing.hpp  XLException.hpp  XLFormula.hpp  XLIterator.hpp  XLMergeCells.hpp  XLProperties.hpp  XLRelationships.hpp  XLRow.hpp  XLRowData.hpp  XLSharedStrings.hpp  XLSheet.hpp  XLStyles.hpp  XLTables.hpp  XLWorkbook.hpp  XLXmlData.hpp  XLXmlFile.hpp  XLXmlParser.hpp  XLZipArchive.hpp
OpenXLSX/sources/: XLCell.cpp  XLCellIterator.cpp  XLCellRange.cpp  XLCellReference.cpp  XLCellValue.cpp  XLColor.cpp  XLColumn.cpp  XLComments.cpp  XLContentTypes.cpp  XLDateTime.cpp  XLDocument.cpp  XLDrawing.cpp  XLFormula.cpp  XLMergeCells.cpp  XLProperties.cpp  XLRelationships.cpp  XLRow.cpp  XLRowData.cpp  XLSharedStrings.cpp  XLSheet.cpp  XLStyles.cpp  XLTables.cpp  XLWorkbook.cpp  XLXmlData.cpp  XLXmlFile.cpp  XLXmlParser.cpp  XLZipArchive.cpp
OpenXLSX/sources/utilities/: XLUtilities.hpp
ProjectControlWidget/: CMakeLists.txt
ProjectControlWidget/include/cc/neolux/projectcontrol/: project_control_widget.h
ProjectControlWidget/src/: project_control_widget.cpp  projectcontrolwidget.ui
Recent/: CMakeLists.txt
Recent/include/cc/neolux/fem/recent/: recent_project_history.h
Recent/src/: recent_project_history.cpp
Versions/: CMakeLists.txt
Versions/include/cc/neolux/fem/version/: app_info.h
assets/: sample_workspace.femmpw
cmake/: BuildType.cmake  CopyQm.cmake  LinuxCross.cmake  README.md  WindowsMsys2Qt.cmake  WindowsOfficialQt.cmake  mingw64.cmake
docs/: AutoBuildPackScript.md  femapp_desssiner.md
fem/include/cc/neolux/fem/: FileAssociation.h  app_menu_coordinator.h  global_menu_controller.h  xlsx_editor_module.h  xlsx_proc.h
fem/src/: FileAssociation.cpp  app_menu_coordinator.cpp  femapp.cpp  femapp.h  femapp_slots.cpp  global_menu_controller.cpp  main.cpp  mainwindow.ui  xlsx_editor_module.cpp  xlsx_proc.cpp
translations/: femapp.en_US.ts  femapp.zh_CN.qm  femapp.zh_CN.ts
